--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -6,14 +6,14 @@ body {
   height: 100%;
 }
 
-h1 {
-  margin: 0;
-  font-weight: 300;
-}
-
-#root {
+body {
   background: url("image.png") no-repeat 98% 2%;
   padding: 20px;
   height: 100%;
   box-sizing: border-box;
+}
+
+h1 {
+  margin: 0;
+  font-weight: 300;
 }
